k8s-specifications/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
spec:
  type: LoadBalancer
  selector:
    app: result
  ports:
    - port: 8081
      targetPort: 80
