k8s-specifications/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 8080
  selector:
    app: vote
